added terminal css

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" type="text/css" href="vendors/css/jquery.fullPage.css" />
   <link rel="stylesheet" type="text/css" href="vendors/css/examples.css" />
   <link rel="stylesheet" href="vendors/css/fullPage.css">
+  <link rel="stylesheet" href="vendors/css/terminal.css">
 
 
   <!--[if IE]>
@@ -37,24 +38,6 @@
   <option id="backgrounds">Classoto</option>
   <option id="backgroundVideo">Glucosy</option>
   <option id="gradientBackgrounds">Glossry</option>
-<!--   <option id="backgroundsFixed">Fixed fullscreen backgrounds</option>
-  <option id="looping">Looping</option>
-  <option id="noAnchor">No anchor links</option>
-  <option id="scrollingSpeed">Scrolling speed</option>
-  <option id="easing">Easing</option>
-  <option id="callbacks">Callbacks</option>
-  <option id="css3">CSS3</option>
-  <option id="continuous">Continuous scrolling</option>
-  <option id="normalScroll">Normal scrolling</option>
-  <option id="scrollBar">Scroll bar enabled</option>
-  <option id="scrolling">Scroll inside sections and slides</option>
-  <option id="navigationV">Vertical navigation dots</option>
-  <option id="navigationH">Horizontal navigation dots</option>
-  <option id="fixedHeaders">Fixed headers</option>
-  <option id="apple">Apple iPhone demo (animations)</option>
-  <option id="oneSection">One single section</option>
-  <option id="responsive">Responsive</option>
-  <option id="methods">Methods</option> -->
 </select>
 
 <div id="fullpage">
@@ -68,8 +51,17 @@
     <h1>Howiye. I'm Sox.</h1>
     <h2>General Assembly Graduate of WDI8-Sydney-2015</h2>
     <h3>I'm a curious coder with a passion for edTech, Health and Roller Derby.</h3>
-    <img src="https://mansoorin.files.wordpress.com/2014/03/awesome-code-typography-hd-wallpaper-1920x1080-2616.jpg" alt="iphone" />
+    <!-- <img src="https://mansoorin.files.wordpress.com/2014/03/awesome-code-typography-hd-wallpaper-1920x1080-2616.jpg" alt="iphone" /> -->
+  
+    <div class="text-editor-wrap">
+        <div class="title-bar"><span class="title">Ruby &mdash; Javascript &mdash; Rails &mdash; GA WDI<span class="terminal-height">2015</span></span></div>
+        <div class="text-body">
+            $ <span id="typed"></span>
+        </div>
+    </div>
+
   </div>
+
   <div class="section" id="section1">
     <div class="wrap">
       <div class="imgsContainer">
