--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
-
   <script type="text/javascript" src="js/lib/jquery.fullPage.min.js"></script>
+  <script type="text/javascript" src="js/lib/typed.min.js"></script>
   <script type="text/javascript" src="vendors/js/examples.js"></script>
   <script type="text/javascript" src="vendors/js/fullpage.js"></script>
+  <script type="text/javascript" src="vendors/js/header.js"></script>
 
 
 </head>
@@ -53,12 +54,14 @@
     <h3>I'm a curious coder with a passion for edTech, Health and Roller Derby.</h3>
     <!-- <img src="https://mansoorin.files.wordpress.com/2014/03/awesome-code-typography-hd-wallpaper-1920x1080-2616.jpg" alt="iphone" /> -->
   
+  <div class="head-wrap">
     <div class="text-editor-wrap">
         <div class="title-bar"><span class="title">Ruby &mdash; Javascript &mdash; Rails &mdash; GA WDI<span class="terminal-height">2015</span></span></div>
         <div class="text-body">
             $ <span id="typed"></span>
         </div>
     </div>
+  </div>
 
   </div>
 
