--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </div>
 
   <div class="section " id="section0">
-    <h1>Howiye. I'm Sox.</h1>
+    <h1>PORTFOLIO</h1>
     <h2>General Assembly Graduate of WDI8-Sydney-2015</h2>
     <h3>I'm a curious coder with a passion for edTech, Health and Roller Derby.</h3>
     <!-- <img src="https://mansoorin.files.wordpress.com/2014/03/awesome-code-typography-hd-wallpaper-1920x1080-2616.jpg" alt="iphone" /> -->
@@ -61,6 +61,7 @@
             $ <span id="typed"></span>
         </div>
     </div>
+    <img src="http://3.bp.blogspot.com/-5lROSSxlGSw/UqtagW1S0uI/AAAAAAAAATQ/ZWKD_Bf3-b4/s1600/upside-down-arrow-md.png" alt="">
   </div>
 
   </div>
@@ -70,7 +71,7 @@
       <div class="imgsContainer">
         <img src="imgs/iphone2.png" alt="iphone" id="iphone2" />
         <img src="imgs/iphone3.png" alt="iphone" id="iphone3" />
-        <img src="imgs/iphone4.png" alt="iphone" id="iphone4" />
+        <!-- <img src="imgs/iphone4.png" alt="iphone" id="iphone4" /> -->
       </div>
 
       <div class="box">
@@ -90,7 +91,7 @@
 
       <div class="box">
         <h2>Amazing stuff</h2>
-        Combining core learnings in <strong>Ruby, Rails, Javascript, Testing</strong> along with CSS and jQuery, we were able to create three projects during our time in General Assembly. Remarkable.
+        Combining core learnings in <strong>Ruby, Rails, Javascript, Testing</strong> along with CSS and jQuery. Joel, DT and Jack helped our class create three projects during our time in General Assembly. Give it one more scroll and you'll see what we accomplished in 12 short weeks.
       </div>
     </div>
   </div>
