--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>P O R T F O L I O</title>
   <meta name="author" content="Alvaro Trigo Lopez" />
-  <meta name="description" content="fullPage full-screen apple iphone 5c similar website. Reproducing one sigle scrolling site like Apple iPhone." />
-  <meta name="keywords"  content="fullpage,jquery,demo,screen,fullscreen,apple,iphone5c,iphone5s,iphone,iphone-5c,like,reproduce,similar,how to" />
+  <meta name="description" content="fullPage full-screen portfolio site. Reproducing one sigle scrolling site like Apple iPhone." />
+  <meta name="keywords"  content="fullpage,jquery,demo,screen,fullscreen,ruby,javascript,webdev,how to" />
   <meta name="Resource-type" content="Document" />
 
 
   <link rel="stylesheet" type="text/css" href="vendors/css/jquery.fullPage.css" />
-  <link rel="stylesheet" type="text/css" href="vendors/css/examples.css" />
   <link rel="stylesheet" href="vendors/css/fullPage.css">
   <link rel="stylesheet" href="vendors/css/terminal.css">
 
@@ -34,17 +33,10 @@
 </head>
 <body>
 
-<select id="demosMenu">
-  <option selected>Choose Project</option>
-  <option id="backgrounds">Classoto</option>
-  <option id="backgroundVideo">Glucosy</option>
-  <option id="gradientBackgrounds">Glossry</option>
-</select>
-
 <div id="fullpage">
   <div id="staticImg">
     <div class="imgsContainer">
-      <img src="imgs/iphone-green.png" alt="iphone" id="iphone-green" />
+      <img src="imgs/iphone-green.png" alt="sox-profile" id="iphone-green" />
     </div>
   </div>
 
@@ -52,7 +44,6 @@
     <h1>PORTFOLIO</h1>
     <h2>General Assembly Graduate of WDI8-Sydney-2015</h2>
     <h3>I'm a curious coder with a passion for edTech, Health and Roller Derby.</h3>
-    <!-- <img src="https://mansoorin.files.wordpress.com/2014/03/awesome-code-typography-hd-wallpaper-1920x1080-2616.jpg" alt="iphone" /> -->
   
   <div class="head-wrap">
     <div class="text-editor-wrap">
@@ -69,9 +60,8 @@
   <div class="section" id="section1">
     <div class="wrap">
       <div class="imgsContainer">
-        <img src="imgs/iphone2.png" alt="iphone" id="iphone2" />
-        <img src="imgs/iphone3.png" alt="iphone" id="iphone3" />
-        <!-- <img src="imgs/iphone4.png" alt="iphone" id="iphone4" /> -->
+        <img src="imgs/iphone-ga.png" alt="iphone" id="iphone-ga" />
+        <img src="imgs/iphone-ga-info.png" alt="iphone" id="iphone-ga-info" />
       </div>
 
       <div class="box">
@@ -84,9 +74,9 @@
   <div class="section moveDown" id="section2">
     <div class="wrap">
       <div class="imgsContainer">
-        <img src="imgs/iphone-yellow.png" alt="iphone" id="iphone-yellow" />
-        <img src="imgs/iphone-red.png" alt="iphone" id="iphone-red" />
-        <img src="imgs/iphone-blue.png" alt="iphone" id="iphone-blue" />
+       <img src="imgs/iphone-yellow.png" alt="iphone" id="iphone-yellow" />
+       <img src="imgs/iphone-red.png" alt="iphone" id="iphone-red" />
+       <img src="imgs/iphone-blue.png" alt="iphone" id="iphone-blue" />
       </div>
 
       <div class="box">
@@ -98,7 +88,7 @@
   <div class="section moveDown" id="section3">
     <div class="wrap">
       <div class="box">
-        <h2>Fancy a little demo?</h2>
+        <h2>Want to know more?</h2>
         You can go directly to each project website.
         Or...if you're short on time, simply select some simple screenshots for each project below.
         I really do love to learn so if you would like to collaborate or pitch me an idea to build, I'm all ears.
