added font contact icons

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>P O R T F O L I O</title>
   <meta name="author" content="Alvaro Trigo Lopez" />
@@ -9,12 +10,9 @@
   <meta name="keywords"  content="fullpage,jquery,demo,screen,fullscreen,ruby,javascript,webdev,how to" />
   <meta name="Resource-type" content="Document" />
 
-
   <link rel="stylesheet" type="text/css" href="vendors/css/jquery.fullPage.css" />
   <link rel="stylesheet" href="vendors/css/fullPage.css">
   <link rel="stylesheet" href="vendors/css/terminal.css">
-
-
   <!--[if IE]>
     <script type="text/javascript">
        var console = { log: function() {} };
@@ -25,10 +23,8 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
   <script type="text/javascript" src="js/lib/jquery.fullPage.min.js"></script>
   <script type="text/javascript" src="js/lib/typed.min.js"></script>
-  <script type="text/javascript" src="vendors/js/examples.js"></script>
   <script type="text/javascript" src="vendors/js/fullpage.js"></script>
   <script type="text/javascript" src="vendors/js/header.js"></script>
-
 
 </head>
 <body>
@@ -41,9 +37,12 @@
   </div>
 
   <div class="section " id="section0">
-    <h1>PORTFOLIO</h1>
-    <h2>General Assembly Graduate of WDI8-Sydney-2015</h2>
-    <h3>I'm a curious coder with a passion for edTech, Health and Roller Derby.</h3>
+    <!-- <h1>PORTFOLIO</h1> -->
+    <h1>General Assembly Graduate</h1>
+    <h3>Web Development Immersive 8 | Sydney 2015.</h3>
+    <i class="fa fa-github-alt fa-3x" href="http://github.com"></i>
+    <i class="fa fa-twitter-square fa-3x"></i>  
+    <i class="fa fa-envelope-o fa-3x"></i>
   
   <div class="head-wrap">
     <div class="text-editor-wrap">
@@ -81,7 +80,7 @@
 
       <div class="box">
         <h2>Amazing stuff</h2>
-        Combining core learnings in <strong>Ruby, Rails, Javascript, Testing</strong> along with CSS and jQuery. Joel, DT and Jack helped our class create three projects during our time in General Assembly. Give it one more scroll and you'll see what we accomplished in 12 short weeks.
+        Combining core learnings in <strong>Ruby, Rails, Javascript, Testing</strong> along with CSS and jQuery. Joel, DT and Jack helped our class create three projects during our time in General Assembly. Give it one more scroll and you'll see what we accomplished in 12 short weeks. 
       </div>
     </div>
   </div>
@@ -89,14 +88,14 @@
     <div class="wrap">
       <div class="box">
         <h2>Want to know more?</h2>
-        You can go directly to each project website.
-        Or...if you're short on time, simply select some simple screenshots for each project below.
+        You can skim each project
         I really do love to learn so if you would like to collaborate or pitch me an idea to build, I'm all ears.
+        <i class="fa fa-github-alt fa-3x" href="http://github.com"></i>
+        <i class="fa fa-twitter-square fa-3x"></i>  
+        <i class="fa fa-envelope-o fa-3x"></i>
       </div>
     </div>
-    <div class="imgsContainer">
-      <img src="imgs/iphone-two.png" alt="iphone" id="iphone-two" />
-    </div>
+
   </div>
 </div>
 
