--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
 
   <div class="section " id="section0">
     <!-- <h1>PORTFOLIO</h1> -->
-    <h1>General Assembly Graduate</h1>
-    <h3>Web Development Immersive 8 | Sydney 2015.</h3>
-    <i class="fa fa-github-alt fa-3x" href="http://github.com"></i>
-    <i class="fa fa-twitter-square fa-3x"></i>  
-    <i class="fa fa-envelope-o fa-3x"></i>
+    <h1>Sox's Portfolio</h1>
+    <h3>GA Web Development Immersive 8 | Sydney 2015.</h3>
+    <a target="_blank" href="http://github.com/soxface"><i class="fa fa-github-alt fa-2x"></i></a>
+    <a target="_blank" href="http://twitter.com/soxyface"><i class="fa fa-twitter-square fa-2x"></i></a>
+    <a target="_blank" href="mailto:sonyacorcoran@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a>
+    
   
   <div class="head-wrap">
     <div class="text-editor-wrap">
