--- a/index.html
+++ b/index.html
@@ -88,12 +88,8 @@
   <div class="section moveDown" id="section3">
     <div class="wrap">
       <div class="box">
-        <h2>Want to know more?</h2>
-        You can skim each project
+        <h2>That's it from me. Thanks for reading!</h2>
         I really do love to learn so if you would like to collaborate or pitch me an idea to build, I'm all ears.
-        <i class="fa fa-github-alt fa-3x" href="http://github.com"></i>
-        <i class="fa fa-twitter-square fa-3x"></i>  
-        <i class="fa fa-envelope-o fa-3x"></i>
       </div>
     </div>
 
