--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div id="fullpage">
   <div id="staticImg">
     <div class="imgsContainer">
-      <img src="imgs/iphone-green.png" alt="sox-profile" id="iphone-green" />
+      <img src="imgs/sox-wink.gif" alt="sox-profile" id="iphone-green" />
     </div>
   </div>
 
@@ -42,7 +42,7 @@
     <h3>GA Web Development Immersive 8 | Sydney 2015.</h3>
     <a target="_blank" href="http://github.com/soxface"><i class="fa fa-github-alt fa-2x"></i></a>
     <a target="_blank" href="http://twitter.com/soxyface"><i class="fa fa-twitter-square fa-2x"></i></a>
-    <a target="_blank" href="mailto:sonyacorcoran@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a>
+    <a  href="mailto:sonyacorcoran@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a>
     
   
   <div class="head-wrap">
@@ -92,7 +92,9 @@
         I really do love to learn so if you would like to collaborate or pitch me an idea to build, I'm all ears.
       </div>
     </div>
-
+    <div class="imgsContainer">
+          <img src="imgs/ga-wdi-projects.gif" alt="projects" id="iphone-two" />
+    </div>
   </div>
 </div>
 
