added basic footer

--- a/index.html
+++ b/index.html
@@ -98,5 +98,12 @@
   </div>
 </div>
 
+<div id="footer">
+  <a target="_blank" href="http://github.com/soxface"><i class="fa fa-github-alt fa-2x"></i></a>
+  <a target="_blank" href="http://twitter.com/soxyface"><i class="fa fa-twitter-square fa-2x"></i></a>
+  <a  href="mailto:sonyacorcoran@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a>
+  <p>Sonya Corcoran | General Assembly WDI Graduate 2015</p>
+</div>
+
 </body>
 </html>
