--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </script>
   <![endif]-->
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
   <script type="text/javascript" src="js/lib/jquery.fullPage.min.js"></script>
   <script type="text/javascript" src="js/lib/typed.min.js"></script>
   <script type="text/javascript" src="vendors/js/fullpage.js"></script>
